# git-extract

./: README.md  pyproject.toml
.github/workflows/: release.yml
git_extract/: cli.py  files.py
tests/: test_git_extract.py
