[tool.poetry]
name = "git_extract"
version = "1.1.4"
description = "Extract files or directories from a git repository"
authors = ["Marc Ford <mrfxyz567@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mfdeux/git-extract"
packages = [{ include = "git_extract" }]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.17.0"
black = "^19.10b0"

[tool.poetry.scripts]
git-extract = "git_extract.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

